fixed spacing and alignment for elements

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,10 +15,13 @@ body {
 }
 #newGame {
 	display: none;
+	background-color: #fafafa;
+	text-align: center;
 }
 #timer {
-	height: 150px;
+	height: 75px;
 	font-size: 26px;
+	text-align: center;
 }
 .lowTime {
 	color: red;
@@ -27,5 +30,11 @@ body {
 	margin-top: 100px;
 }
 .jumbotron {
-	min-height: 400px;
+	min-height: 550px;
+	padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+.panel-title {
+	text-align: center;
+	font-weight: bolder;
 }
